<package>
  <name>rosruby_actionlib</name>
  <version>0.1.1</version>
  <description>actionlib for rosruby.</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosruby_actionlib</url>
  <url type="bugtracker">http://github.com/OTL/rosruby_common</url>

  <author>Takashi Ogura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosruby</build_depend>
  <run_depend>rosruby</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <test_depend>actionlib_tutorials</test_depend>

  <export>

  </export>
</package>