<package>
  <name>rosruby_common</name>
  <version>0.1.1</version>
  <description>rosruby_common libraries</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosruby_common</url>
  <url type="bugtracker">http://github.com/OTL/rosruby_common</url>

  <author>Maintained by Takashi Ogura</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosruby_actionlib</run_depend>
  <run_depend>rosruby_tutorials</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
