<package>
  <name>rosruby_tutorials</name>
  <version>0.1.1</version>
  <description>rosruby_tutorials contains source codes of rosruby tutorials.</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosruby_tutorials</url>
  <url type="bugtracker">http://github.com/OTL/rosruby_common</url>

  <author>Takashi Ogura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>genrb</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosruby</build_depend>
  <build_depend>actionlib_tutorials</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rosruby</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosruby_actionlib</run_depend>
  <run_depend>actionlib_tutorials</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>